ComponentAccessor update